# aas-todesopfer-scraper

./: LICENSE.md  README.md  scraper.py
ass-todesopfer/: .gitignore  README.md  pyproject.toml  requirements.txt  scraper.py
